--- a/css/styles.css
+++ b/css/styles.css
@@ -216,10 +216,6 @@ h1 {
     padding: 20px;
 }
 
-#work {
-    margin-bottom: 40px;
-}
-
 /* Contenedor para cada fila de educación */
 
 .education-row {
@@ -250,6 +246,10 @@ h1 {
 
 
 /* Experience */
+
+#work {
+    margin-top: 40%;
+}
 
 #experience-work {
     margin-bottom: 40px;
@@ -340,10 +340,11 @@ h1 {
 }
 
 #papers-projects li {
-    background-color: var(--secondary-color); 
+    background-color: #98c7cc; 
     color: var(--background-color);
     border: 1px solid #140c0c; 
     box-shadow: 0 2px 5px #140c0c;
+    font-size: 18px;
     border-radius: 5px; 
     padding: 15px; 
     font-size: 0.9rem;
@@ -374,7 +375,7 @@ h1 {
 
 /* congress */
 #congress {
-    padding-top: 30%;
+    padding-top: 60%;
     padding-bottom: 10%;
 }
 
@@ -436,14 +437,6 @@ a:hover {
     margin-bottom: 1rem;
 }
 
-.reviewed-date1 {
-    margin-left: 18.5%;
-}
-
-.reviewed-date2 {
-    margin-left: 25%;
-}
-
 .dataset-item {
     background-color: var(--secondary-color);
     color: var(--background-color); 
@@ -470,7 +463,6 @@ a:hover {
 
 section h1 {
     font-size: 24px;
-    margin-bottom: 15px;
     color: var(--primary-color);
 }
 
@@ -503,9 +495,13 @@ section h1 {
 }
 
 /* Media query para tablets (max-width: 1200px) */
-@media (max-width: 1024px) {
+@media (max-width: 768px) {
     .section {
         padding: 20px;
+    }
+
+    section {
+        margin-top: 45%;
     }
 
     .profile-details p {
@@ -543,8 +539,10 @@ section h1 {
         margin-left: 0;
     }
 
+
+
     #home {
-        margin-top: 30%; /* Ajuste más razonable para tablets */
+        margin-top: 60%;
     }
 
     .profile {
@@ -579,7 +577,7 @@ section h1 {
     }
 
     #work {
-        margin-top: 30rem;
+        margin-top: 40rem;
     }
 
     table {
@@ -635,7 +633,7 @@ section h1 {
     }
 
     #congress {
-    margin-top: 50%;
+    margin-top: 60%;
     }
 
     #congress .congress-item {
@@ -661,7 +659,7 @@ section h1 {
 }
 
 /* Media query para móviles (max-width: 600px) */
-@media (max-width: 600px) {
+@media (max-width: 390px) {
     .section {
         padding: 10px;
     }
@@ -807,10 +805,14 @@ section h1 {
         padding-bottom: 2rem;
     }
 
+    #congress {
+    margin-top: 80%;
+    }
+
      #congress h1 {
         font-size: 24px;
         text-align: center;
-        margin-top: 450%;
+        margin-top: 280%;
     }
 
     #congress .congress-item {
@@ -870,6 +872,10 @@ section h1 {
         margin-bottom: 5px;
     }
 
+   span .reviewed-date1, .reviewed-date2 {
+        text-align: start;
+    }
+
     .reviewed-date1, .reviewed-date2, .lecture-date {
         font-size: 14px;
     }
@@ -893,6 +899,14 @@ section h1 {
         font-size: 20px;
     }
 
+
+/*query para notebook */ 
+
+@media (max-width: 1348px)  {
+    #congress {
+        padding-top: 50%;
+    }
+}
 }
 
     
